Updated Stack code

--- a/Python/Stack/stack.ipynb
+++ b/Python/Stack/stack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,18 @@
     "        # Check if data is there in the stack\n",
     "        if self.isEmpty():\n",
     "            print(\"Stack is empty\")\n",
-    "        value = self._data.pop()\n",
-    "        self._size -= 1\n",
-    "        return value\n",
+    "        else:\n",
+    "            value = self._data.pop()\n",
+    "            self._size -= 1\n",
+    "            return value\n",
     "    \n",
     "    # Get the top valus from stack\n",
     "    def top(self):\n",
     "        # Check if data is there in the stack\n",
     "        if self.isEmpty():\n",
     "            print(\"Stack is empty\")\n",
-    "        return self._data[-1]\n",
+    "        else:\n",
+    "            return self._data[-1]\n",
     "        \n",
     "    #Return the size of stack\n",
     "    def size(self):\n",
@@ -49,13 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Stack is empty\n",
       "size of stack =  5\n",
       "top :  2\n",
       "pop : 2\n",
@@ -66,6 +69,7 @@
    ],
    "source": [
     "s = Stack()\n",
+    "s.top() # Stack is empty\n",
     "s.push(5)\n",
     "s.push(9)\n",
     "s.push(2)\n",
