Stack implementation with Python list

--- a/Python/Stack/stack.ipynb
+++ b/Python/Stack/stack.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an exception class\n",
+    "class Empty(Exception):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +40,7 @@
     "    def pop(self):\n",
     "        # Check if data is there in the stack\n",
     "        if self.isEmpty():\n",
-    "            print(\"Stack is empty\")\n",
+    "            raise Empty(\"Stack is empty\")\n",
     "        else:\n",
     "            value = self._data.pop()\n",
     "            self._size -= 1\n",
@@ -39,7 +50,7 @@
     "    def top(self):\n",
     "        # Check if data is there in the stack\n",
     "        if self.isEmpty():\n",
-    "            print(\"Stack is empty\")\n",
+    "            raise Empty(\"Stack is empty\")\n",
     "        else:\n",
     "            return self._data[-1]\n",
     "        \n",
@@ -51,14 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stack is empty\n",
       "size of stack =  5\n",
       "top :  2\n",
       "pop : 2\n",
@@ -69,7 +79,7 @@
    ],
    "source": [
     "s = Stack()\n",
-    "s.top() # Stack is empty\n",
+    "\n",
     "s.push(5)\n",
     "s.push(9)\n",
     "s.push(2)\n",
@@ -82,6 +92,30 @@
     "print(\"pop :\", s.pop())\n",
     "print(\"top :\", s.top())\n",
     "print(\"Size after one pop : \", s.size())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack empty error :  Stack is empty\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for empty. It will raise an exception\n",
+    "S1 = Stack()\n",
+    "try:\n",
+    "    S1.top()\n",
+    "except Empty as e:\n",
+    "    print(\"Stack empty error : \", e)\n",
+    "    \n",
+    "    "
    ]
   },
   {
