Stack implementation with LinkedList

--- a/Python/Stack/Stack_with_LinkedList.ipynb
+++ b/Python/Stack/Stack_with_LinkedList.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ex ception class for Empty list\n",
+    "# Exception class for Empty list\n",
     "class Empty(Exception):\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,6 +121,28 @@
     "print(\"Size after one pop : \", s.size())\n",
     "print(\"\\n\")\n",
     "s.printList()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stack empty error :  Stack is Empty\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for empty. It will raise an exception\n",
+    "S1 = Stack()\n",
+    "try:\n",
+    "    S1.top()\n",
+    "except Empty as e:\n",
+    "    print(\"Stack empty error : \", e)"
    ]
   },
   {
