Binary search tree implementation for Min, mMax, Find, Predecessor and Successor

--- a/Python/BinarySearchTree/BinarySearchTree_Min_Max_Predecessor.ipynb
+++ b/Python/BinarySearchTree/BinarySearchTree_Min_Max_Predecessor.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,17 +104,42 @@
     "        \n",
     "    # Get predecessor of a given element\n",
     "    def predecessor(self, e):\n",
-    "        # Find the node having element e. Find() will return None, if element is not available in the tree\n",
+    "        # Check, if e is the minimum element in the tree. If yes, then just return the same element.\n",
+    "        if(e == self.minVal()):\n",
+    "            return e\n",
+    "        \n",
+    "        # Find the node having element e. Find() will return matching node, if element is available in the tree.\n",
+    "        # otherwise None.\n",
     "        tmp, parent = self.find(e)\n",
     "        if tmp is None:\n",
     "            print(\"element is not available in tree\")\n",
     "            return\n",
-    "        # Find the very next smaller element from tmp\n",
-    "        # For smaller element, find right most element of first left element\n",
+    "        # Find the very next smaller element from tmp data\n",
+    "        # For just smaller element, find right most element of first left element\n",
     "        if tmp._left is None:\n",
     "            return parent._data\n",
     "        else:\n",
     "            tmp = self.maxValEelment(tmp._left)\n",
+    "            return tmp._data\n",
+    "        \n",
+    "         # Get successor of a given element\n",
+    "    def successor(self, e):\n",
+    "        # Check, if e is the maximum element in the tree. If yes, then just return the same element.\n",
+    "        if(e == self.maxVal()):\n",
+    "            return e\n",
+    "        \n",
+    "        # Find the node having element e. Find() will return matching node, if element is available in the tree.\n",
+    "        # otherwise None.\n",
+    "        tmp, parent = self.find(e)\n",
+    "        if tmp is None:\n",
+    "            print(\"element is not available in tree\")\n",
+    "            return\n",
+    "        # Find the very next greater element from tmp data\n",
+    "        # For just greater element, find the left most element of first right element\n",
+    "        if tmp._right is None:\n",
+    "            return parent._data\n",
+    "        else:\n",
+    "            tmp = self.minValElement(tmp._right)\n",
     "            return tmp._data\n",
     "            \n",
     "        \n",
@@ -144,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -152,11 +177,7 @@
      "output_type": "stream",
      "text": [
       "Min Value :  3\n",
-      "Max Value :  9\n",
-      "Predecessor of 9 :  8\n",
-      "Predecessor of 8 :  7\n",
-      "Predecessor of 7 :  6\n",
-      "Predecessor of 4 :  3\n"
+      "Max Value :  9\n"
      ]
     }
    ],
@@ -171,12 +192,59 @@
     "b.insert(3)\n",
     "\n",
     "print(\"Min Value : \", b.minVal())\n",
-    "print(\"Max Value : \", b.maxVal())\n",
+    "print(\"Max Value : \", b.maxVal())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predecessor of 9 :  8\n",
+      "Predecessor of 8 :  7\n",
+      "Predecessor of 7 :  6\n",
+      "Predecessor of 4 :  3\n",
+      "Predecessor of 3 :  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find predecessor\n",
     "print(\"Predecessor of 9 : \", b.predecessor(9))\n",
     "print(\"Predecessor of 8 : \", b.predecessor(8))\n",
     "print(\"Predecessor of 7 : \", b.predecessor(7))\n",
     "print(\"Predecessor of 4 : \", b.predecessor(4))\n",
-    "\n"
+    "print(\"Predecessor of 3 : \", b.predecessor(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successor of 9 :  9\n",
+      "Successor of 8 :  9\n",
+      "Successor of 7 :  8\n",
+      "Successor of 4 :  5\n",
+      "Successor of 3 :  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find Successor\n",
+    "print(\"Successor of 9 : \", b.successor(9))\n",
+    "print(\"Successor of 8 : \", b.successor(8))\n",
+    "print(\"Successor of 7 : \", b.successor(7))\n",
+    "print(\"Successor of 4 : \", b.successor(4))\n",
+    "print(\"Successor of 3 : \", b.successor(3))"
    ]
   },
   {
