Binary search Tree with Min, Max, Predecessor and Successor

--- a/Python/BinarySearchTree/BinarySearchTree_Min_Max_Predecessor.ipynb
+++ b/Python/BinarySearchTree/BinarySearchTree_Min_Max_Predecessor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
     "    \n",
     "    # Get the node having maximum value.\n",
     "    # Maximum value will be with right most node.\n",
-    "    def maxValEelment(self, root):\n",
+    "    def maxValElement(self, root):\n",
     "       \n",
     "        tmp = root\n",
     "        while tmp._right is not None:\n",
@@ -82,7 +82,7 @@
     "    def maxVal(self):\n",
     "        if self._root is None:\n",
     "            raise Empty(\"Tree is Empty\")\n",
-    "        return self.maxValEelment(self._root)._data\n",
+    "        return self.maxValElement(self._root)._data\n",
     "   \n",
     "    # find the node having given data. \n",
     "    #If data is less than root, then travers to left, otherwise right\n",
@@ -91,56 +91,90 @@
     "            raise Empty(\"Tree is empty\")\n",
     "        tmp = self._root\n",
     "        parent = None\n",
-    "        while (data < tmp._data):\n",
-    "            parent = tmp\n",
-    "            tmp = tmp._left\n",
-    "        while (data > tmp._data):\n",
-    "            parent = tmp\n",
-    "            tmp = tmp._right\n",
-    "        if data == tmp._data:\n",
-    "            return tmp, parent\n",
-    "        else:\n",
-    "            return None, None\n",
+    "        while tmp:\n",
+    "            \n",
+    "            if(data < tmp._data):\n",
+    "                parent = tmp\n",
+    "                tmp = tmp._left\n",
+    "            if(data > tmp._data):\n",
+    "                parent = tmp\n",
+    "                tmp = tmp._right\n",
+    "            if tmp is not None and data == tmp._data:\n",
+    "                break\n",
+    "        return tmp, parent\n",
     "        \n",
     "    # Get predecessor of a given element\n",
+    "    # Predecessor:\n",
+    "    #    1. If data is greater than node, then go to the right, and parent is the predecessor\n",
+    "    #    2. If data is smaller than node, then two possibilities\n",
+    "    #         a. Left element would be the predecessor\n",
+    "    #         b. maximum number of the left tree of the node\n",
     "    def predecessor(self, e):\n",
-    "        # Check, if e is the minimum element in the tree. If yes, then just return the same element.\n",
-    "        if(e == self.minVal()):\n",
-    "            return e\n",
     "        \n",
-    "        # Find the node having element e. Find() will return matching node, if element is available in the tree.\n",
-    "        # otherwise None.\n",
-    "        tmp, parent = self.find(e)\n",
-    "        if tmp is None:\n",
-    "            print(\"element is not available in tree\")\n",
-    "            return\n",
-    "        # Find the very next smaller element from tmp data\n",
-    "        # For just smaller element, find right most element of first left element\n",
-    "        if tmp._left is None:\n",
-    "            return parent._data\n",
+    "        pred = None\n",
+    "        tmp = self._root\n",
+    "        # Go to left, if data is smaller than node value\n",
+    "        while(tmp):\n",
+    "            if e < tmp._data:\n",
+    "                tmp = tmp._left\n",
+    "                \n",
+    "          # Go to right, if data is greater than node value\n",
+    "            elif e > tmp._data:\n",
+    "                pred = tmp\n",
+    "                tmp = tmp._right\n",
+    "                \n",
+    "            \n",
+    "            else:\n",
+    "                break;\n",
+    "        # If tmp is null, then given data is not available in the tree\n",
+    "        if tmp == None:\n",
+    "            print(\"Given element is not there in tree\")\n",
+    "            \n",
+    "        # If node's left is there, So, maximum value of node's left is the predecessor\n",
+    "        \n",
+    "        if tmp._left:\n",
+    "            \n",
+    "            pred = self.maxValElement(tmp._left)\n",
+    "        if pred != None:\n",
+    "            return pred._data\n",
     "        else:\n",
-    "            tmp = self.maxValEelment(tmp._left)\n",
-    "            return tmp._data\n",
+    "            return \"No Predecessor\"\n",
     "        \n",
-    "         # Get successor of a given element\n",
+    "    # Get successor of a given element\n",
+    "    # Successor:\n",
+    "    #    1. If data is smaller than node, then go to the left, and parent is the successor\n",
+    "    #    2. If data is greater than node, then two possibilities\n",
+    "    #         a. right element would be the successor\n",
+    "    #         b. minimum number of the right tree of the node\n",
     "    def successor(self, e):\n",
-    "        # Check, if e is the maximum element in the tree. If yes, then just return the same element.\n",
-    "        if(e == self.maxVal()):\n",
-    "            return e\n",
+    "        succ = None\n",
+    "        tmp = self._root\n",
+    "        # Go to right, if data is greater than node value\n",
+    "        while(tmp):\n",
+    "            if e > tmp._data:\n",
+    "                tmp = tmp._right\n",
+    "                \n",
+    "          # Go to left, if data is smaller than node value.\n",
+    "            elif e < tmp._data:\n",
+    "                succ = tmp\n",
+    "                tmp = tmp._left\n",
+    "                \n",
+    "            \n",
+    "            else:\n",
+    "                break;\n",
+    "        # If tmp is null, then given data is not available in the tree\n",
+    "        if tmp == None:\n",
+    "            print(\"Given element is not there in tree\")\n",
+    "            \n",
+    "        # If node's right is there, So, minimum value of node's right is the successor\n",
     "        \n",
-    "        # Find the node having element e. Find() will return matching node, if element is available in the tree.\n",
-    "        # otherwise None.\n",
-    "        tmp, parent = self.find(e)\n",
-    "        if tmp is None:\n",
-    "            print(\"element is not available in tree\")\n",
-    "            return\n",
-    "        # Find the very next greater element from tmp data\n",
-    "        # For just greater element, find the left most element of first right element\n",
-    "        if tmp._right is None:\n",
-    "            return parent._data\n",
+    "        if tmp._right:\n",
+    "            \n",
+    "            succ = self.minValElement(tmp._right)\n",
+    "        if succ != None:\n",
+    "            return succ._data\n",
     "        else:\n",
-    "            tmp = self.minValElement(tmp._right)\n",
-    "            return tmp._data\n",
+    "            return \"No Successor\"\n",
     "            \n",
     "        \n",
     "    \n",
@@ -164,12 +198,13 @@
     "    def inorder(self):\n",
     "        if self._root is None:\n",
     "            raise Empty(\"Tree is empty\")\n",
-    "        self._inorder(self._root)"
+    "        self._inorder(self._root)\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +243,8 @@
       "Predecessor of 8 :  7\n",
       "Predecessor of 7 :  6\n",
       "Predecessor of 4 :  3\n",
-      "Predecessor of 3 :  3\n"
+      "Predecessor of 3 :  No Predecessor\n",
+      "Predecessor of 5 :  4\n"
      ]
     }
    ],
@@ -218,23 +254,25 @@
     "print(\"Predecessor of 8 : \", b.predecessor(8))\n",
     "print(\"Predecessor of 7 : \", b.predecessor(7))\n",
     "print(\"Predecessor of 4 : \", b.predecessor(4))\n",
-    "print(\"Predecessor of 3 : \", b.predecessor(3))"
+    "print(\"Predecessor of 3 : \", b.predecessor(3))\n",
+    "print(\"Predecessor of 5 : \", b.predecessor(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successor of 9 :  9\n",
+      "Successor of 9 :  No Successor\n",
       "Successor of 8 :  9\n",
       "Successor of 7 :  8\n",
       "Successor of 4 :  5\n",
-      "Successor of 3 :  4\n"
+      "Successor of 3 :  4\n",
+      "Successor of 5 :  6\n"
      ]
     }
    ],
@@ -244,7 +282,8 @@
     "print(\"Successor of 8 : \", b.successor(8))\n",
     "print(\"Successor of 7 : \", b.successor(7))\n",
     "print(\"Successor of 4 : \", b.successor(4))\n",
-    "print(\"Successor of 3 : \", b.successor(3))"
+    "print(\"Successor of 3 : \", b.successor(3))\n",
+    "print(\"Successor of 5 : \", b.successor(5))"
    ]
   },
   {
