Good DS Algo problems

--- a/Python/problems/MaxSumIncreasingSubSequence.ipynb
+++ b/Python/problems/MaxSumIncreasingSubSequence.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,31 @@
     "array = [10,70,20,30,50,11,30]\n",
     "print(maxSumIncreasingSubSequnce(array))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14, [2, 3, 4, 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [2,3,8,4,1,5,4]\n",
+    "print(maxSumIncreasingSubSequnce(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
