Good BT Algorithms

--- a/Python/BinaryTree/BinaryTree.ipynb
+++ b/Python/BinaryTree/BinaryTree.ipynb
@@ -109,42 +109,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of node :  5\n",
+      "Number of node :  9\n",
       "\n",
       "****Preorder****\n",
       "1\n",
       "2\n",
       "4\n",
+      "8\n",
+      "9\n",
       "5\n",
       "3\n",
+      "6\n",
+      "7\n",
       "\n",
       "****Postorder****\n",
+      "8\n",
+      "9\n",
       "4\n",
       "5\n",
       "2\n",
+      "6\n",
+      "7\n",
       "3\n",
       "1\n",
       "\n",
       "****inorder****\n",
+      "8\n",
       "4\n",
+      "9\n",
       "2\n",
       "5\n",
       "1\n",
+      "6\n",
       "3\n",
+      "7\n",
       "\n",
       "****levelorder****\n",
       "1\n",
       "2\n",
       "3\n",
       "4\n",
-      "5\n"
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
      ]
     }
    ],
@@ -155,6 +171,10 @@
     "btree.insert(3)\n",
     "btree.insert(4)\n",
     "btree.insert(5)\n",
+    "btree.insert(6)\n",
+    "btree.insert(7)\n",
+    "btree.insert(8)\n",
+    "btree.insert(9)\n",
     "\n",
     "print(\"Number of node : \", btree.size())\n",
     "print(\"\\n****Preorder****\")\n",
