maximum elements in subarray of size K

--- a/Python/SlidingWindow/Maximum of all elements in subarray.ipynb
+++ b/Python/SlidingWindow/Maximum of all elements in subarray.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
     "    temp = []\n",
     "    for j in range(k):\n",
     "        e = array[j]\n",
-    "        while len(temp)>0 and e>temp[0]:\n",
-    "            temp.pop(0)\n",
+    "        while len(temp)>0 and e>temp[-1]:\n",
+    "            temp.pop()\n",
     "        temp.append(e)\n",
     "    \n",
     "    result = []\n",
@@ -37,13 +37,12 @@
     "    right = j+1\n",
     "    result.append(temp[0])\n",
     "    while right < len(array):\n",
-    "        \n",
     "        e = array[left]\n",
     "        if e == temp[0]:\n",
     "            temp.pop(0)\n",
     "        e = array[right]\n",
-    "        while len(temp)>0 and e>temp[0]:\n",
-    "            temp.pop(0)\n",
+    "        while len(temp)>0 and e>temp[-1]:\n",
+    "            temp.pop()\n",
     "        temp.append(e)\n",
     "        \n",
     "        result.append(temp[0])\n",
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -66,13 +65,35 @@
        "[3, 3, 5, 5, 5, 3, 3, 7]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "array = [2,3,-1,2,5,1,2,3,-2,7]\n",
+    "k = 3\n",
+    "maxElementsInSubarray(array, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 3, 2, 5]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [1,3,1,2,0,5]\n",
     "k = 3\n",
     "maxElementsInSubarray(array, k)"
    ]
