--- a/Python/SlidingWindow/First non negative number in window of size k.ipynb
+++ b/Python/SlidingWindow/First non negative number in window of size k.ipynb
@@ -83,6 +83,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def firstNegativeNum(array, k):\n",
+    "    temp = []\n",
+    "    for right in range(k):\n",
+    "        if array[right]<0:\n",
+    "            temp.append(array[right])\n",
+    "    \n",
+    "    result = []\n",
+    "    if len(temp) != 0:\n",
+    "        result.append(temp[0])\n",
+    "    else:\n",
+    "        result.append(0)\n",
+    "        \n",
+    "    right += 1\n",
+    "    left = 0\n",
+    "    \n",
+    "    while right<len(array):\n",
+    "        if array[left] < 0:\n",
+    "            temp.pop(0)\n",
+    "        if array[right] < 0:\n",
+    "            temp.append(array[right])\n",
+    "            \n",
+    "        if len(temp) != 0:\n",
+    "            result.append(temp[0])\n",
+    "        else:\n",
+    "            result.append(0)\n",
+    "        \n",
+    "        left += 1\n",
+    "        right += 1\n",
+    "    return result\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, -1, -7, -15, -15, 0]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [12, -1, -7, 8, -15, 30, 16, 8]\n",
+    "k = 3\n",
+    "firstNegativeNum(array, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
