--- a/Python/DynamicProgramming/HR-Delete-And-Earn.ipynb
+++ b/Python/DynamicProgramming/HR-Delete-And-Earn.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem\n",
+    "## Leet code 740\n",
     "\n",
     "You are given an integer array nums. You want to maximize the number of points you get by performing the following operation any number of times:\n",
     "\n",
