--- a/Python/DynamicProgramming/HR-HouseRobber.ipynb
+++ b/Python/DynamicProgramming/HR-HouseRobber.ipynb
@@ -28,7 +28,13 @@
     "Explanation: Rob house 1 (money = 2), rob house 3 (money = 9) and rob house 5 (money = 1).\n",
     "\n",
     "\n",
-    "Total amount you can rob = 2 + 9 + 1 = 12.\n"
+    "Total amount you can rob = 2 + 9 + 1 = 12.\n",
+    "\n",
+    "Constraints:\n",
+    "\n",
+    "1 <= nums.length <= 100\n",
+    "\n",
+    "0 <= nums[i] <= 400\n"
    ]
   },
   {
