--- a/Python/DynamicProgramming/HR-MinimumCostClimbingStairs.ipynb
+++ b/Python/DynamicProgramming/HR-MinimumCostClimbingStairs.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem\n",
+    "## Problem Leet Code 746\n",
     "You are given an integer array cost where cost[i] is the cost of ith step on a staircase. Once you pay the cost, you can either climb one or two steps.\n",
     "\n",
     "You can either start from the step with index 0, or the step with index 1.\n",
     "\n",
-    "Return the minimum cost to reach the top of the floor\n",
+    "Return the minimum cost to reach the top of the floor. Here top floor is (n+1)th position. If input array size is n (in below question it is 3) then top floor is (n+1)th position, in below example top floor is 4th.\n",
     "\n",
     "Example 1:\n",
     "\n",
@@ -36,7 +36,13 @@
     "- Pay 1 and climb one step to reach the top.\n",
     "\n",
     "\n",
-    "The total cost is 6."
+    "The total cost is 6.\n",
+    "\n",
+    "Constraints:\n",
+    "\n",
+    "2 <= cost.length <= 1000\n",
+    "\n",
+    "0 <= cost[i] <= 999"
    ]
   },
   {
@@ -161,7 +167,6 @@
     "    \n",
     "    for i in range(2, n+1):\n",
     "        dp[i] = min(dp[i-2] + costs[i-2], dp[i-1] + costs[i-1])\n",
-    "        print(dp)\n",
     "    return dp[-1]"
    ]
   },
