--- a/Python/DynamicProgramming/Knapsack-Minimum-Number-Of-Coins-Change.ipynb
+++ b/Python/DynamicProgramming/Knapsack-Minimum-Number-Of-Coins-Change.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "3"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,6 +116,28 @@
    "source": [
     "coins = [1,2,5]\n",
     "amount = 11\n",
+    "minimumNumberCoinsChange_donotuse(coins, amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coins = [1,2,3]\n",
+    "amount = 5\n",
     "minimumNumberCoinsChange_donotuse(coins, amount)"
    ]
   },
