--- a/Python/DynamicProgramming/Knapsack-SubSet-Sum.ipynb
+++ b/Python/DynamicProgramming/Knapsack-SubSet-Sum.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### It is simlar to knapsack 0-1 priblem. We have to choose number to be included in answer or not. If number is bigger than given value then it can not be included. If value is less than given value, then two choices, include or not include. If included then reduce the value by chosen number and remove that number from array (reduce the size), if not included then just remove the number from array. "
+    "#### It is simlar to knapsack 0-1 problem. We have to choose number to be included in answer or not. If number is bigger than given value then it can not be included. If value is less than given value, then two choices, include or not include. If included then reduce the value by chosen number and remove that number from array (reduce the size), if not included then just remove the number from array. "
    ]
   },
   {
@@ -129,6 +129,105 @@
     "array = [1,2,5,7,8,10]\n",
     "value = 4\n",
     "subSetSum(array, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Backtracking way\n",
+    "\n",
+    "def subset_backtracking(nums, v):\n",
+    "    return helper(nums, v, 0)\n",
+    "def helper(nums, v, index):\n",
+    "    if v == 0:\n",
+    "        return True\n",
+    "    if index == len(nums):\n",
+    "        return False\n",
+    "    for i in range(index, len(nums)):\n",
+    "        if nums[i]<= v:\n",
+    "            if helper(nums, v-nums[i], i+1):\n",
+    "                return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums =[1,2,5,7,8,10]\n",
+    "v = 16\n",
+    "subset_backtracking(nums, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the first set as well. Backtracking way \n",
+    "def subset(nums, v):\n",
+    "    \n",
+    "    temp = []\n",
+    "    return helper(nums, v, 0, temp)\n",
+    "def helper(nums, v, index, temp):\n",
+    "    if v == 0:\n",
+    "        print(temp)\n",
+    "        return True\n",
+    "    if index == len(nums):\n",
+    "        return False\n",
+    "    for i in range(index, len(nums)):\n",
+    "        if nums[i]<= v:\n",
+    "            temp.append(nums[i])\n",
+    "            if helper(nums, v-nums[i], i+1, temp):\n",
+    "                return True\n",
+    "            temp.pop()\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums =[1,2,5,7,8,10]\n",
+    "v = 16\n",
+    "subset(nums, v)"
    ]
   },
   {
