Updated code and added files

--- a/Python/SlidingWindow/Count of occurrence of anagram in a string.ipynb
+++ b/Python/SlidingWindow/Count of occurrence of anagram in a string.ipynb
@@ -106,6 +106,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return an array of all the start indices of pattern anagrams in string, in place of count."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def indicesOfAnagram(s, p):\n",
+    "    k = len(p)\n",
+    "    temp = {}\n",
+    "    for c in p:\n",
+    "        temp[c] = temp.get(c, 0) + 1\n",
+    "    \n",
+    "    totalChars = len(temp)\n",
+    "    for r in range(k):\n",
+    "        c = s[r]\n",
+    "        if c in temp:\n",
+    "            temp[c] -= 1\n",
+    "            if temp[c] == 0:\n",
+    "                totalChars -= 1\n",
+    "    result = []\n",
+    "    if totalChars == 0:\n",
+    "        result.append(0)\n",
+    "    l = 0\n",
+    "    r = k\n",
+    "    while r < len(s):\n",
+    "        c = s[l]\n",
+    "        if c in temp:\n",
+    "            temp[c] += 1\n",
+    "            if temp[c] == 1:\n",
+    "                totalChars += 1\n",
+    "        c = s[r]\n",
+    "        if c in temp:\n",
+    "            temp[c] -= 1\n",
+    "            if temp[c] == 0:\n",
+    "                totalChars -= 1\n",
+    "        l += 1\n",
+    "        if totalChars == 0:\n",
+    "            result.append(l)\n",
+    "        r += 1\n",
+    "    return result\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 4, 10, 11, 12, 13]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"aaabaabacbbaaabaa\"\n",
+    "pattern = \"aaba\"\n",
+    "indicesOfAnagram(string, pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 6]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"cbaebabacd\"\n",
+    "p = \"abc\"\n",
+    "indicesOfAnagram(s, p)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
