--- a/Python/SlidingWindow/Longest-SubString-With-K-Unique-Characters.ipynb
+++ b/Python/SlidingWindow/Longest-SubString-With-K-Unique-Characters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +82,83 @@
     "string = \"bcdaabbcccbbdbacyz\"\n",
     "k = 3\n",
     "longestSubstringWithKUniqueChar(string, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"aaaabccccccccccd\"\n",
+    "k = 3\n",
+    "longestSubstringWithKUniqueChar(string, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimized\n",
+    "\n",
+    "def maxlenSubStringKUniqueChar(string, k):\n",
+    "    temp = {}\n",
+    "    ml =0\n",
+    "    l =0\n",
+    "    r = 0\n",
+    "    uniqueLen = 0\n",
+    "    while r < len(string):\n",
+    "        s = string[r]\n",
+    "        temp[s] = temp.get(s, 0) + 1\n",
+    "        if temp[s]==1:\n",
+    "            uniqueLen += 1\n",
+    "        while uniqueLen > k:\n",
+    "            sl = string[l]\n",
+    "            if sl in temp:\n",
+    "                temp[sl] -= 1\n",
+    "                if temp[sl] == 0:\n",
+    "                    uniqueLen -= 1\n",
+    "            l += 1\n",
+    "        if uniqueLen == k:\n",
+    "            ml = max(ml, r-l+1)\n",
+    "        r += 1\n",
+    "    return ml\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"bcdaabbcccbbdbacyz\"\n",
+    "k = 3\n",
+    "maxlenSubStringKUniqueChar(string, k)"
    ]
   },
   {
