--- a/Python/SlidingWindow/Longest-SubString-Without-Repeating-Characters.ipynb
+++ b/Python/SlidingWindow/Longest-SubString-Without-Repeating-Characters.ipynb
@@ -108,6 +108,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Code optimization\n",
+    "def longestSubstringWithoutRepeatingChars1(string):\n",
+    "    if len(string)==0:\n",
+    "        return 0\n",
+    "    right = 0\n",
+    "    left = 0\n",
+    "    temp = {}\n",
+    "    length = 0\n",
+    "    while right < len(string):\n",
+    "        s = string[right]\n",
+    "        temp[s] = temp.get(s, 0)+ 1\n",
+    "        \n",
+    "        while (right-left+1) > len(temp):\n",
+    "            \n",
+    "            s = string[left]\n",
+    "            if s in temp:\n",
+    "                temp[s] -= 1\n",
+    "                if temp[s] == 0:\n",
+    "                    temp.pop(s)\n",
+    "            left += 1\n",
+    "        if len(temp) == (right-left+1):\n",
+    "            l = right - left + 1\n",
+    "            length = max(length, l)\n",
+    "        right += 1\n",
+    "    return length  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"abcaabcdefggghhf\"\n",
+    "longestSubstringWithoutRepeatingChars1(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"aaabb\"\n",
+    "longestSubstringWithoutRepeatingChars1(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Further Code optimization\n",
+    "def longestSubstringWithoutRepeatingChars2(string):\n",
+    "    temp = {}\n",
+    "    length = 0\n",
+    "    left, right = 0, 0\n",
+    "    while right < len(string):\n",
+    "        s = string[right]\n",
+    "        if s in temp:\n",
+    "            left = max(left, temp[s]+1)\n",
+    "        if right - left + 1 > length:\n",
+    "            length = right-left+1\n",
+    "        temp[s] = right\n",
+    "        right += 1\n",
+    "    return length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"abcaabcdefggghhf\"\n",
+    "longestSubstringWithoutRepeatingChars2(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
