--- a/Python/SlidingWindow/Largest-Sum-Array-Of-K.ipynb
+++ b/Python/SlidingWindow/Largest-Sum-Array-Of-K.ipynb
@@ -84,10 +84,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Code optimization\n",
+    "def largestSubarraySum1(array, k):\n",
+    "    length = 0\n",
+    "    sum = 0\n",
+    "    \n",
+    "    left = 0\n",
+    "    right = 0\n",
+    "    \n",
+    "    while right < len(array):\n",
+    "        \n",
+    "        sum = sum + array[right]\n",
+    "        while sum > k and left<=right:\n",
+    "            sum = sum - array[left]\n",
+    "            left += 1\n",
+    "        if sum == k:\n",
+    "            l = right - left + 1\n",
+    "            length = max(length, l)\n",
+    "        right += 1\n",
+    "    return length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [4,1,-1,1,-10,1,2,3,4,5]\n",
+    "k = 5\n",
+    "largestSubarraySum1(array, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [5,3,2]\n",
+    "k = 5\n",
+    "largestSubarraySum1(array, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [4,1,10,1,1,1,1,2,3,5]\n",
+    "k = 5\n",
+    "largestSubarraySum1(array, k)"
+   ]
   },
   {
    "cell_type": "code",
